gem5_llc_refresh/src/arch/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> opt_rom_or_macros
Rule 2     opt_rom_or_macros -> <empty>
Rule 3     opt_rom_or_macros -> rom_or_macros
Rule 4     rom_or_macros -> rom_or_macro
Rule 5     rom_or_macros -> rom_or_macros rom_or_macro
Rule 6     rom_or_macro -> rom_block
Rule 7     rom_or_macro -> macroop_def
Rule 8     rom_block -> DEF ROM block SEMI
Rule 9     macroop_def -> DEF MACROOP ID LPAREN ID RPAREN SEMI
Rule 10    macroop_def -> DEF MACROOP ID block SEMI
Rule 11    block -> LBRACE statements RBRACE
Rule 12    statements -> statement
Rule 13    statements -> statements statement
Rule 14    statement -> content_of_statement end_of_statement
Rule 15    content_of_statement -> microop
Rule 16    content_of_statement -> directive
Rule 17    content_of_statement -> <empty>
Rule 18    end_of_statement -> NEWLINE
Rule 19    end_of_statement -> SEMI
Rule 20    microop -> labels ID
Rule 21    microop -> ID
Rule 22    microop -> labels ID PARAMS
Rule 23    microop -> ID PARAMS
Rule 24    labels -> label
Rule 25    labels -> labels label
Rule 26    labels -> labels NEWLINE
Rule 27    label -> ID COLON
Rule 28    label -> EXTERN ID COLON
Rule 29    directive -> DOT ID
Rule 30    directive -> DOT ID PARAMS

Terminals, with rules where they appear

COLON                : 27 28
DEF                  : 8 9 10
DOT                  : 29 30
EXTERN               : 28
ID                   : 9 9 10 20 21 22 23 27 28 29 30
LBRACE               : 11
LPAREN               : 9
MACROOP              : 9 10
NEWLINE              : 18 26
PARAMS               : 22 23 30
RBRACE               : 11
ROM                  : 8
RPAREN               : 9
SEMI                 : 8 9 10 19
error                : 

Nonterminals, with rules where they appear

block                : 8 10
content_of_statement : 14
directive            : 16
end_of_statement     : 14
file                 : 0
label                : 24 25
labels               : 20 22 25 26
macroop_def          : 7
microop              : 15
opt_rom_or_macros    : 1
rom_block            : 6
rom_or_macro         : 4 5
rom_or_macros        : 3 5
statement            : 12 13
statements           : 11 13

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . opt_rom_or_macros
    (2) opt_rom_or_macros -> .
    (3) opt_rom_or_macros -> . rom_or_macros
    (4) rom_or_macros -> . rom_or_macro
    (5) rom_or_macros -> . rom_or_macros rom_or_macro
    (6) rom_or_macro -> . rom_block
    (7) rom_or_macro -> . macroop_def
    (8) rom_block -> . DEF ROM block SEMI
    (9) macroop_def -> . DEF MACROOP ID LPAREN ID RPAREN SEMI
    (10) macroop_def -> . DEF MACROOP ID block SEMI

    $end            reduce using rule 2 (opt_rom_or_macros -> .)
    DEF             shift and go to state 7

    file                           shift and go to state 1
    opt_rom_or_macros              shift and go to state 2
    rom_or_macros                  shift and go to state 3
    rom_or_macro                   shift and go to state 4
    rom_block                      shift and go to state 5
    macroop_def                    shift and go to state 6

state 1

    (0) S' -> file .



state 2

    (1) file -> opt_rom_or_macros .

    $end            reduce using rule 1 (file -> opt_rom_or_macros .)


state 3

    (3) opt_rom_or_macros -> rom_or_macros .
    (5) rom_or_macros -> rom_or_macros . rom_or_macro
    (6) rom_or_macro -> . rom_block
    (7) rom_or_macro -> . macroop_def
    (8) rom_block -> . DEF ROM block SEMI
    (9) macroop_def -> . DEF MACROOP ID LPAREN ID RPAREN SEMI
    (10) macroop_def -> . DEF MACROOP ID block SEMI

    $end            reduce using rule 3 (opt_rom_or_macros -> rom_or_macros .)
    DEF             shift and go to state 7

    rom_or_macro                   shift and go to state 8
    rom_block                      shift and go to state 5
    macroop_def                    shift and go to state 6

state 4

    (4) rom_or_macros -> rom_or_macro .

    DEF             reduce using rule 4 (rom_or_macros -> rom_or_macro .)
    $end            reduce using rule 4 (rom_or_macros -> rom_or_macro .)


state 5

    (6) rom_or_macro -> rom_block .

    DEF             reduce using rule 6 (rom_or_macro -> rom_block .)
    $end            reduce using rule 6 (rom_or_macro -> rom_block .)


state 6

    (7) rom_or_macro -> macroop_def .

    DEF             reduce using rule 7 (rom_or_macro -> macroop_def .)
    $end            reduce using rule 7 (rom_or_macro -> macroop_def .)


state 7

    (8) rom_block -> DEF . ROM block SEMI
    (9) macroop_def -> DEF . MACROOP ID LPAREN ID RPAREN SEMI
    (10) macroop_def -> DEF . MACROOP ID block SEMI

    ROM             shift and go to state 9
    MACROOP         shift and go to state 10


state 8

    (5) rom_or_macros -> rom_or_macros rom_or_macro .

    DEF             reduce using rule 5 (rom_or_macros -> rom_or_macros rom_or_macro .)
    $end            reduce using rule 5 (rom_or_macros -> rom_or_macros rom_or_macro .)


state 9

    (8) rom_block -> DEF ROM . block SEMI
    (11) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 12

    block                          shift and go to state 11

state 10

    (9) macroop_def -> DEF MACROOP . ID LPAREN ID RPAREN SEMI
    (10) macroop_def -> DEF MACROOP . ID block SEMI

    ID              shift and go to state 13


state 11

    (8) rom_block -> DEF ROM block . SEMI

    SEMI            shift and go to state 14


state 12

    (11) block -> LBRACE . statements RBRACE
    (12) statements -> . statement
    (13) statements -> . statements statement
    (14) statement -> . content_of_statement end_of_statement
    (15) content_of_statement -> . microop
    (16) content_of_statement -> . directive
    (17) content_of_statement -> .
    (20) microop -> . labels ID
    (21) microop -> . ID
    (22) microop -> . labels ID PARAMS
    (23) microop -> . ID PARAMS
    (29) directive -> . DOT ID
    (30) directive -> . DOT ID PARAMS
    (24) labels -> . label
    (25) labels -> . labels label
    (26) labels -> . labels NEWLINE
    (27) label -> . ID COLON
    (28) label -> . EXTERN ID COLON

    NEWLINE         reduce using rule 17 (content_of_statement -> .)
    SEMI            reduce using rule 17 (content_of_statement -> .)
    ID              shift and go to state 21
    DOT             shift and go to state 22
    EXTERN          shift and go to state 24

    statements                     shift and go to state 15
    statement                      shift and go to state 16
    content_of_statement           shift and go to state 17
    microop                        shift and go to state 18
    directive                      shift and go to state 19
    labels                         shift and go to state 20
    label                          shift and go to state 23

state 13

    (9) macroop_def -> DEF MACROOP ID . LPAREN ID RPAREN SEMI
    (10) macroop_def -> DEF MACROOP ID . block SEMI
    (11) block -> . LBRACE statements RBRACE

    LPAREN          shift and go to state 25
    LBRACE          shift and go to state 12

    block                          shift and go to state 26

state 14

    (8) rom_block -> DEF ROM block SEMI .

    DEF             reduce using rule 8 (rom_block -> DEF ROM block SEMI .)
    $end            reduce using rule 8 (rom_block -> DEF ROM block SEMI .)


state 15

    (11) block -> LBRACE statements . RBRACE
    (13) statements -> statements . statement
    (14) statement -> . content_of_statement end_of_statement
    (15) content_of_statement -> . microop
    (16) content_of_statement -> . directive
    (17) content_of_statement -> .
    (20) microop -> . labels ID
    (21) microop -> . ID
    (22) microop -> . labels ID PARAMS
    (23) microop -> . ID PARAMS
    (29) directive -> . DOT ID
    (30) directive -> . DOT ID PARAMS
    (24) labels -> . label
    (25) labels -> . labels label
    (26) labels -> . labels NEWLINE
    (27) label -> . ID COLON
    (28) label -> . EXTERN ID COLON

    RBRACE          shift and go to state 27
    NEWLINE         reduce using rule 17 (content_of_statement -> .)
    SEMI            reduce using rule 17 (content_of_statement -> .)
    ID              shift and go to state 21
    DOT             shift and go to state 22
    EXTERN          shift and go to state 24

    statement                      shift and go to state 28
    content_of_statement           shift and go to state 17
    microop                        shift and go to state 18
    directive                      shift and go to state 19
    labels                         shift and go to state 20
    label                          shift and go to state 23

state 16

    (12) statements -> statement .

    RBRACE          reduce using rule 12 (statements -> statement .)
    ID              reduce using rule 12 (statements -> statement .)
    DOT             reduce using rule 12 (statements -> statement .)
    EXTERN          reduce using rule 12 (statements -> statement .)
    NEWLINE         reduce using rule 12 (statements -> statement .)
    SEMI            reduce using rule 12 (statements -> statement .)


state 17

    (14) statement -> content_of_statement . end_of_statement
    (18) end_of_statement -> . NEWLINE
    (19) end_of_statement -> . SEMI

    NEWLINE         shift and go to state 30
    SEMI            shift and go to state 31

    end_of_statement               shift and go to state 29

state 18

    (15) content_of_statement -> microop .

    NEWLINE         reduce using rule 15 (content_of_statement -> microop .)
    SEMI            reduce using rule 15 (content_of_statement -> microop .)


state 19

    (16) content_of_statement -> directive .

    NEWLINE         reduce using rule 16 (content_of_statement -> directive .)
    SEMI            reduce using rule 16 (content_of_statement -> directive .)


state 20

    (20) microop -> labels . ID
    (22) microop -> labels . ID PARAMS
    (25) labels -> labels . label
    (26) labels -> labels . NEWLINE
    (27) label -> . ID COLON
    (28) label -> . EXTERN ID COLON

    ID              shift and go to state 32
    NEWLINE         shift and go to state 34
    EXTERN          shift and go to state 24

    label                          shift and go to state 33

state 21

    (21) microop -> ID .
    (23) microop -> ID . PARAMS
    (27) label -> ID . COLON

    NEWLINE         reduce using rule 21 (microop -> ID .)
    SEMI            reduce using rule 21 (microop -> ID .)
    PARAMS          shift and go to state 35
    COLON           shift and go to state 36


state 22

    (29) directive -> DOT . ID
    (30) directive -> DOT . ID PARAMS

    ID              shift and go to state 37


state 23

    (24) labels -> label .

    ID              reduce using rule 24 (labels -> label .)
    NEWLINE         reduce using rule 24 (labels -> label .)
    EXTERN          reduce using rule 24 (labels -> label .)


state 24

    (28) label -> EXTERN . ID COLON

    ID              shift and go to state 38


state 25

    (9) macroop_def -> DEF MACROOP ID LPAREN . ID RPAREN SEMI

    ID              shift and go to state 39


state 26

    (10) macroop_def -> DEF MACROOP ID block . SEMI

    SEMI            shift and go to state 40


state 27

    (11) block -> LBRACE statements RBRACE .

    SEMI            reduce using rule 11 (block -> LBRACE statements RBRACE .)


state 28

    (13) statements -> statements statement .

    RBRACE          reduce using rule 13 (statements -> statements statement .)
    ID              reduce using rule 13 (statements -> statements statement .)
    DOT             reduce using rule 13 (statements -> statements statement .)
    EXTERN          reduce using rule 13 (statements -> statements statement .)
    NEWLINE         reduce using rule 13 (statements -> statements statement .)
    SEMI            reduce using rule 13 (statements -> statements statement .)


state 29

    (14) statement -> content_of_statement end_of_statement .

    RBRACE          reduce using rule 14 (statement -> content_of_statement end_of_statement .)
    ID              reduce using rule 14 (statement -> content_of_statement end_of_statement .)
    DOT             reduce using rule 14 (statement -> content_of_statement end_of_statement .)
    EXTERN          reduce using rule 14 (statement -> content_of_statement end_of_statement .)
    NEWLINE         reduce using rule 14 (statement -> content_of_statement end_of_statement .)
    SEMI            reduce using rule 14 (statement -> content_of_statement end_of_statement .)


state 30

    (18) end_of_statement -> NEWLINE .

    RBRACE          reduce using rule 18 (end_of_statement -> NEWLINE .)
    ID              reduce using rule 18 (end_of_statement -> NEWLINE .)
    DOT             reduce using rule 18 (end_of_statement -> NEWLINE .)
    EXTERN          reduce using rule 18 (end_of_statement -> NEWLINE .)
    NEWLINE         reduce using rule 18 (end_of_statement -> NEWLINE .)
    SEMI            reduce using rule 18 (end_of_statement -> NEWLINE .)


state 31

    (19) end_of_statement -> SEMI .

    RBRACE          reduce using rule 19 (end_of_statement -> SEMI .)
    ID              reduce using rule 19 (end_of_statement -> SEMI .)
    DOT             reduce using rule 19 (end_of_statement -> SEMI .)
    EXTERN          reduce using rule 19 (end_of_statement -> SEMI .)
    NEWLINE         reduce using rule 19 (end_of_statement -> SEMI .)
    SEMI            reduce using rule 19 (end_of_statement -> SEMI .)


state 32

    (20) microop -> labels ID .
    (22) microop -> labels ID . PARAMS
    (27) label -> ID . COLON

    NEWLINE         reduce using rule 20 (microop -> labels ID .)
    SEMI            reduce using rule 20 (microop -> labels ID .)
    PARAMS          shift and go to state 41
    COLON           shift and go to state 36


state 33

    (25) labels -> labels label .

    ID              reduce using rule 25 (labels -> labels label .)
    NEWLINE         reduce using rule 25 (labels -> labels label .)
    EXTERN          reduce using rule 25 (labels -> labels label .)


state 34

    (26) labels -> labels NEWLINE .

    ID              reduce using rule 26 (labels -> labels NEWLINE .)
    NEWLINE         reduce using rule 26 (labels -> labels NEWLINE .)
    EXTERN          reduce using rule 26 (labels -> labels NEWLINE .)


state 35

    (23) microop -> ID PARAMS .

    NEWLINE         reduce using rule 23 (microop -> ID PARAMS .)
    SEMI            reduce using rule 23 (microop -> ID PARAMS .)


state 36

    (27) label -> ID COLON .

    ID              reduce using rule 27 (label -> ID COLON .)
    NEWLINE         reduce using rule 27 (label -> ID COLON .)
    EXTERN          reduce using rule 27 (label -> ID COLON .)


state 37

    (29) directive -> DOT ID .
    (30) directive -> DOT ID . PARAMS

    NEWLINE         reduce using rule 29 (directive -> DOT ID .)
    SEMI            reduce using rule 29 (directive -> DOT ID .)
    PARAMS          shift and go to state 42


state 38

    (28) label -> EXTERN ID . COLON

    COLON           shift and go to state 43


state 39

    (9) macroop_def -> DEF MACROOP ID LPAREN ID . RPAREN SEMI

    RPAREN          shift and go to state 44


state 40

    (10) macroop_def -> DEF MACROOP ID block SEMI .

    DEF             reduce using rule 10 (macroop_def -> DEF MACROOP ID block SEMI .)
    $end            reduce using rule 10 (macroop_def -> DEF MACROOP ID block SEMI .)


state 41

    (22) microop -> labels ID PARAMS .

    NEWLINE         reduce using rule 22 (microop -> labels ID PARAMS .)
    SEMI            reduce using rule 22 (microop -> labels ID PARAMS .)


state 42

    (30) directive -> DOT ID PARAMS .

    NEWLINE         reduce using rule 30 (directive -> DOT ID PARAMS .)
    SEMI            reduce using rule 30 (directive -> DOT ID PARAMS .)


state 43

    (28) label -> EXTERN ID COLON .

    ID              reduce using rule 28 (label -> EXTERN ID COLON .)
    NEWLINE         reduce using rule 28 (label -> EXTERN ID COLON .)
    EXTERN          reduce using rule 28 (label -> EXTERN ID COLON .)


state 44

    (9) macroop_def -> DEF MACROOP ID LPAREN ID RPAREN . SEMI

    SEMI            shift and go to state 45


state 45

    (9) macroop_def -> DEF MACROOP ID LPAREN ID RPAREN SEMI .

    DEF             reduce using rule 9 (macroop_def -> DEF MACROOP ID LPAREN ID RPAREN SEMI .)
    $end            reduce using rule 9 (macroop_def -> DEF MACROOP ID LPAREN ID RPAREN SEMI .)

